# getUsefulCode

./: .gitignore  CMakeLists.txt  compile_commands.json  config.json  getUsefulCode.cpp  test.cpp  test2.cpp
include/: BuildGraphASTVisitor.cpp  BuildGraphASTVisitor.h  CMakeLists.txt  ConfigData.cpp  ConfigData.hpp  GetUsefulCodeASTAction.cpp  GetUsefulCodeASTAction.h  GetUsefulCodeASTConsumer.cpp  GetUsefulCodeASTConsumer.h  GetUsefulCodeASTVisitor.cpp  GetUsefulCodeASTVisitor.h  GetUsefulCodeFrontendActionFactory.cpp  GetUsefulCodeFrontendActionFactory.h  MyClangTools.cpp  MyClangTools.h  MyCompilationDataBase.cpp  MyCompilationDataBase.h  RecordPPCallbacks.cpp  RecordPPCallbacks.h
include/ValidCodeVisitor/: CMakeLists.txt  ValidCodeVisitor.cpp  ValidCodeVisitor.h
